# rusty-book-manager

./: .dockerignore  .yamllint.yml  Cargo.toml  Dockerfile  Dockerfile.cargo-chef  Makefile.toml  compose.yaml  flake.nix  renovate.json  rust-toolchain.toml
.github/workflows/: ci.yml  frontend_ci.yaml
adapter/: Cargo.toml
adapter/migrations/: 20260118012345_start.up.sql
adapter/src/: database.rs  lib.rs  redis.rs  unit_of_work.rs
adapter/src/database/model/: auth.rs  book.rs  checkout.rs  user.rs
adapter/src/repository/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
adapter/src/repository/fixtures/: book_checkout.sql  common.sql
adapter/src/unit_of_work/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/: Cargo.toml
api/src/: extractor.rs  lib.rs
api/src/handler/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
api/src/model/: book.rs  checkout.rs  user.rs
api/src/route/: auth.rs  book.rs  health.rs  user.rs
api/tests/api/: book.rs  helper.rs
data/: initial_setup.sql
frontend/: Dockerfile  package-lock.json  package.json
frontend/app/_contexts/: book.ts  checkout.ts
frontend/app/_lib/: client.ts
frontend/app/_types/: book.ts
frontend/app/books/[id]/edit/: page.tsx
frontend/app/users/password/: page.tsx
infra/: .gitignore  main.tf
infra/_amplify/: amplify.yml
infra/app/: main.tf  variable.tf
infra/middleware/: variables.tf
infra/network/: main.tf
kernel/: Cargo.toml
kernel/src/: lib.rs  model.rs  unit_of_work.rs
kernel/src/model/: book.rs  checkout.rs  id.rs  user.rs  value.rs
kernel/src/model/auth/: event.rs
kernel/src/model/book/: event.rs
kernel/src/model/checkout/: event.rs
kernel/src/model/user/: event.rs
kernel/src/repository/: auth.rs  book.rs  checkout.rs  user.rs
kernel/src/unit_of_work/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
kernel/src/use_case/: auth.rs  book.rs  checkout.rs  health.rs  user.rs
registry/src/: lib.rs
shared/: Cargo.toml
shared/src/: error.rs
snippets/06/rstest-example/: Cargo.toml
snippets/06/rstest-example/output/: expanded-lib-6-2-1.rs  expanded-lib-6-3.rs
snippets/06/rstest-example/src/: lib-6-2-1.rs  lib-6-2-4-1.rs  lib-6-2-4-2.rs  lib-6-3.rs
snippets/06/sqlx-test-example/: Cargo.toml
snippets/06/sqlx-test-example/migrations/: 20240916151126_setup.sql
snippets/06/sqlx-test-example/src/: lib-6-4-1.rs
snippets/06/sqlx-test-example/src/fixtures/: common.sql
src/: main.rs
