[package]
name = "rusty-book-manager"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "app"
path = "src/bin/app.rs"

[workspace]
members = ["adapter", "api", "kernel", "registry", "shared"]

[workspace.dependencies]
adapter = { path = "./adapter" }
anyhow = "1.0.75"
api = { path = "./api" }
async-trait = "0.1.74"
axum = { version = "0.7.5", features = ["macros"] }
derive-new = "0.6.0"
kernel = { path = "./kernel" }
registry = { path = "./registry" }
serde = { version = "1.0.174", features = ["derive"] }
shared = { path = "./shared" }
sqlx = { version = "0.7.3", features = [
  "chrono",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "uuid",
] }
thiserror = "1.0.44"
tokio = { version = "1.37.0", features = ["full"] }
uuid = { version = "1.4.0", features = ["v4", "serde"] }

[dependencies]
adapter.workspace = true
anyhow.workspace = true
api.workspace = true
axum.workspace = true
registry.workspace = true
shared.workspace = true
tokio.workspace = true
