[package]
name = "adapter"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
bcrypt.workspace = true
chrono.workspace = true
kernel.workspace = true
redis.workspace = true
shared.workspace = true
sqlx.workspace = true
tokio.workspace = true

[dev-dependencies]
anyhow.workspace = true
