[package]
name = "api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
axum-extra.workspace = true
axum.workspace = true
chrono.workspace = true
derive-new.workspace = true
garde.workspace = true
kernel.workspace = true
registry.workspace = true
serde.workspace = true
shared.workspace = true
strum.workspace = true

[dev-dependencies]
anyhow.workspace = true
hyper = "0.14.27"
mockall.workspace = true
rstest = "0.18.2"
serde_json = "1.0.105"
