[package]
name = "kernel"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
chrono.workspace = true
derive-new.workspace = true
serde.workspace = true
shared.workspace = true
sqlx.workspace = true
strum.workspace = true
uuid.workspace = true

[dev-dependencies]
anyhow.workspace = true
